<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/dialog_agreement_layout"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <pl.orangelabs.wificalling.ctrl.CustomFontTextView
        style="@style/VOWIFI.Text.Header.Big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/turn_on_wifi"
        app:useHeaderFont="true"/>

    <include layout="@layout/inc_separator"/>

    <pl.orangelabs.wificalling.ctrl.CustomFontTextView
        android:id="@+id/dialog_agreement_text"
        style="@style/VOWIFI.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="15dp"
        android:text="@string/connect_to_wifi_message"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <pl.orangelabs.wificalling.ctrl.CustomFontTextView
            android:id="@+id/dialog_wifi_settings_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="15dp"
            android:text="@string/dialog_wifi_settings_change"/>

        <ImageView
            android:id="@+id/dialog_wifi_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/VOWIFI.Image"
            android:layout_below="@+id/dialog_wifi_settings_info"
            android:layout_marginStart="30dp"
            android:src="@drawable/icon_wifi"/>

        <pl.orangelabs.wificalling.ctrl.CustomFontTextView
            style="@style/VOWIFI.Text.Custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/dialog_wifi_icon"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/dialog_wifi_icon"
            android:layout_marginStart="10dp"
            android:text="@string/dialog_wifi_wifi_connection"
            app:useHeaderFont="true"/>

    </RelativeLayout>

</LinearLayout>