<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_selectable"
    android:elevation="6dp"
    android:minHeight="64dp"
    android:orientation="horizontal"
    android:paddingBottom="14dp"
    android:paddingTop="14dp"
    app:elevation="6dp">

    <ImageView
        android:id="@+id/recspec_connections_item_photo"
        android:layout_width="@dimen/list_item_icon_size"
        android:layout_height="@dimen/list_item_icon_size"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_avatar_thumbnail"
        android:transitionName="@string/animation_contact_details_photo"/>

    <pl.orangelabs.wificalling.ctrl.CustomFontTextView
        android:id="@+id/recspec_connections_item_type"
        style="@style/VOWIFI.Text"
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/dbg_data1"
        />

    <pl.orangelabs.wificalling.ctrl.CustomFontTextView
        android:id="@+id/recspec_connections_item_header"
        style="@style/VOWIFI.Text"
        android:layout_toStartOf="@id/recspec_connections_item_type"
        android:layout_toEndOf="@id/recspec_connections_item_photo"
        android:text="@string/dbg_data1"
        android:textStyle="bold"
        android:transitionName="@string/animation_contact_details_name"/>

    <pl.orangelabs.wificalling.ctrl.CustomFontTextView
        android:id="@+id/recspec_connections_item_phone"
        style="@style/VOWIFI.Text.Light"
        android:layout_below="@id/recspec_connections_item_header"
        android:layout_toStartOf="@id/recspec_connections_item_type"
        android:layout_toEndOf="@id/recspec_connections_item_photo"
        android:text="@string/dbg_data1"/>

    <pl.orangelabs.wificalling.ctrl.CustomFontTextView
        android:id="@+id/recspec_connections_item_date"
        style="@style/VOWIFI.Text.Light"
        android:layout_below="@id/recspec_connections_item_phone"
        android:layout_toStartOf="@id/recspec_connections_item_type"
        android:layout_toEndOf="@id/recspec_connections_item_photo"
        android:text="@string/dbg_data1"/>

    <ImageView
        android:id="@+id/recspec_connections_item_state"
        android:layout_height="@dimen/list_item_right_icon_size"
        android:layout_width="@dimen/list_item_right_icon_size"
        android:layout_marginBottom="@dimen/iv_state_bottom_margin"
        android:layout_alignBottom="@+id/recspec_connections_item_date"
        android:layout_alignEnd="@+id/recspec_connections_item_type"/>

</RelativeLayout>