<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:orientation="vertical"
    app:statusBarBackground="@null">

    <include layout="@layout/inc_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/view_contact_details_bottom_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <include layout="@layout/inc_separator"/>

            <pl.orangelabs.wificalling.ctrl.CustomFontTextView
                android:id="@+id/view_contact_details_call_log"
                style="@style/VOWIFI.Text.Bold"
                android:layout_height="36dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:textColor="@color/textAccented"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/view_contact_details_bottom_frame"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/view_contact_details_photo"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:src="@drawable/ic_avatar_full"
                android:transitionName="@string/animation_contact_details_photo"
                />

            <pl.orangelabs.wificalling.ctrl.CustomFontTextView
                android:id="@+id/view_contact_details_name"
                style="@style/VOWIFI.Text.Header.Big"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="28dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/dbg_data1"
                android:textColor="@color/textImportant"
                android:transitionName="@string/animation_contact_details_name"
                app:useHeaderFont="true"/>

            <include layout="@layout/inc_separator"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/view_contact_details_phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <include layout="@layout/inc_separator"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/view_contact_details_call_log_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@color/bgDefault"
            android:visibility="invisible"/>
    </RelativeLayout>

</LinearLayout>